--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "sass": "^1.77.8"
