--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
+    "katex": "^0.16.11",
+    "mathjax-react": "^2.0.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-katex": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "sass": "^1.77.8"
